--- a/backend/notebooks/test.ipynb
+++ b/backend/notebooks/test.ipynb
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "f0c5ae32",
    "metadata": {},
    "outputs": [
@@ -195,18 +195,19 @@
     "        print(\"No samples parsed.\")\n",
     "    return samples\n",
     "\n",
-    "def load_samples_agg(path):\n",
-    "    samples = load_csv_trace(path)\n",
-    "    if samples:\n",
-    "        total_dl = sum(int(s[1] or 0) for s in samples)\n",
-    "        total_ul = sum(int(s[2] or 0) for s in samples)\n",
-    "        duration = samples[-1][0] - samples[0][0] if len(samples) > 1 else 0.0\n",
-    "        print(f\"samples={len(samples)}, duration={duration:.3f}s, total_dl={total_dl}B, total_ul={total_ul}B\")\n",
-    "        print(\"head:\", samples[:5])\n",
-    "        print(\"tail:\", samples[-5:])\n",
-    "    else:\n",
-    "        print(\"No samples parsed.\")\n",
-    "    return samples\n",
+    "\n",
+    "# def load_samples_agg(path):\n",
+    "#     samples = load_csv_trace(path)\n",
+    "#     if samples:\n",
+    "#         total_dl = sum(int(s[1] or 0) for s in samples)\n",
+    "#         total_ul = sum(int(s[2] or 0) for s in samples)\n",
+    "#         duration = samples[-1][0] - samples[0][0] if len(samples) > 1 else 0.0\n",
+    "#         print(f\"samples={len(samples)}, duration={duration:.3f}s, total_dl={total_dl}B, total_ul={total_ul}B\")\n",
+    "#         print(\"head:\", samples[:5])\n",
+    "#         print(\"tail:\", samples[-5:])\n",
+    "#     else:\n",
+    "#         print(\"No samples parsed.\")\n",
+    "#     return samples\n",
     "\n",
     "SAMPLES = load_samples_raw(FILES[0])  # choose one file to start\n"
    ]
