add the code to check and seperate data based on the files

--- a/backend/notebooks/test.ipynb
+++ b/backend/notebooks/test.ipynb
@@ -1346,6 +1346,143 @@
     "# After running the server above:\n",
     "live_plot(hist_window=30)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52a195e8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8121b54",
+   "metadata": {},
+   "source": [
+    "### Test to use mixed.csv file and chunk it into data for all 3 slices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "f8a07ccb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current directory: /home/elahe/user/elahe/new-ai-ran-sim/backend/notebooks\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "print(\"Current directory:\", os.getcwd())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a2ff9e98",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "App names in the file:\n",
+      "- WhatsApp\n",
+      "- Google Play service\n",
+      "- Google Fi\n",
+      "- Messages\n",
+      "- Google News\n",
+      "- Gmail\n",
+      "- USAA SafePilot\n",
+      "- Google Connectivity\n",
+      "- Accountable2You\n",
+      "- YouTube\n",
+      "- Google Play Store\n",
+      "- Drive\n",
+      "- Packers\n",
+      "- Phone\n",
+      "- Meet\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load your CSV\n",
+    "df = pd.read_csv(\"../assets/traces/mixed.csv\")\n",
+    "\n",
+    "# Get unique app names\n",
+    "apps = df[\"App name\"].dropna().unique().tolist()\n",
+    "\n",
+    "# Print them\n",
+    "print(\"App names in the file:\")\n",
+    "for app in apps:\n",
+    "    print(\"-\", app)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0ba03c34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files saved in: ../assets/traces\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "# Define slices\n",
+    "embb_apps = [\"YouTube\"]\n",
+    "urllc_apps = [\"Meet\"]\n",
+    "\n",
+    "# Filter\n",
+    "df_embb = df[df[\"App name\"].isin(embb_apps)]\n",
+    "df_urllc = df[df[\"App name\"].isin(urllc_apps)]\n",
+    "df_mmtc = df[~df[\"App name\"].isin(embb_apps + urllc_apps)]\n",
+    "\n",
+    "# Define output folder (change this to where you want)\n",
+    "output_dir = Path(\"../assets/traces/\")  # example for Linux/Mac\n",
+    "# output_dir = Path(\"C:/Users/Elahe/Documents/output_csvs\")  # example for Windows\n",
+    "\n",
+    "# Make sure folder exists\n",
+    "output_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "# Save files inside that folder\n",
+    "df_embb.to_csv(output_dir / \"eMBB.csv\", index=False)\n",
+    "df_urllc.to_csv(output_dir / \"URLLC.csv\", index=False)\n",
+    "df_mmtc.to_csv(output_dir / \"mMTC.csv\", index=False)\n",
+    "\n",
+    "print(f\"Files saved in: {output_dir}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1eedccf3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2562289",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
