first try to generate some data to test the functionality of my code

--- a/backend/notebooks/test.ipynb
+++ b/backend/notebooks/test.ipynb
@@ -1477,12 +1477,77 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "d440accb",
+   "metadata": {},
+   "source": [
+    "## Generating fake data to validate the code"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b2562289",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Generated: generated_traces/embb_gen.csv\n",
+      "✅ Generated: generated_traces/urllc_gen.csv\n",
+      "✅ Generated: generated_traces/mmtc_gen.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "import random\n",
+    "import os\n",
+    "\n",
+    "def generate_trace_with_ips(\n",
+    "    filename,\n",
+    "    duration_s=100,\n",
+    "    interval_s=0.1,\n",
+    "    length_range=(100, 500),\n",
+    "    seed=42,\n",
+    "    ue_ip=\"172.30.1.1\",\n",
+    "    server_ip=\"172.30.1.250\"\n",
+    "):\n",
+    "    random.seed(seed)\n",
+    "    with open(filename, 'w', newline='') as f:\n",
+    "        writer = csv.writer(f)\n",
+    "        writer.writerow(['Time', 'Source', 'Destination', 'Length'])\n",
+    "\n",
+    "        time = 0.0\n",
+    "        while time <= duration_s:\n",
+    "            # Randomly decide uplink or downlink\n",
+    "            if random.random() < 0.5:\n",
+    "                srcIP, dstIP = ue_ip, server_ip  # Uplink\n",
+    "            else:\n",
+    "                srcIP, dstIP = server_ip, ue_ip  # Downlink\n",
+    "\n",
+    "            length = random.randint(*length_range)\n",
+    "            writer.writerow([round(time, 2), srcIP, dstIP, length])\n",
+    "            time += interval_s\n",
+    "\n",
+    "# Output directory\n",
+    "output_dir = 'generated_traces'\n",
+    "os.makedirs(output_dir, exist_ok=True)\n",
+    "\n",
+    "# Settings for each slice\n",
+    "slice_configs = {\n",
+    "    'embb_gen.csv': (300, 500),\n",
+    "    'urllc_gen.csv': (100, 200),\n",
+    "    'mmtc_gen.csv': (0, 100),\n",
+    "}\n",
+    "\n",
+    "# Generate the files\n",
+    "for filename, length_range in slice_configs.items():\n",
+    "    full_path = os.path.join(output_dir, filename)\n",
+    "    generate_trace_with_ips(full_path, length_range=length_range)\n",
+    "    print(f\"✅ Generated: {full_path}\")\n"
+   ]
   }
  ],
  "metadata": {
