some minor change in the test.ipynb for the data generation

--- a/backend/notebooks/test.ipynb
+++ b/backend/notebooks/test.ipynb
@@ -2093,6 +2093,124 @@
     "generate_overloaded_slice_trace(\"synthetic_urllc_queueing.csv\", \"URLLC\", duration_s=10, overload_factor=2.0)\n",
     "generate_overloaded_slice_trace(\"synthetic_mmtc_queueing.csv\", \"mMTC\", duration_s=10, overload_factor=2.0)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "af20ca57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "import random\n",
+    "\n",
+    "def generate_overloaded_slice_trace(filename, slice_type, duration_s=10, overload_factor=2.0):\n",
+    "    \"\"\"\n",
+    "    Generate synthetic traffic trace for a 5G network slice with overloaded traffic\n",
+    "    to simulate queuing. Packet size and direction are tailored to each slice type.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - filename: Output CSV file name\n",
+    "    - slice_type: 'eMBB', 'URLLC', or 'mMTC'\n",
+    "    - duration_s: Total duration of the trace in seconds\n",
+    "    - overload_factor: Traffic volume multiplier relative to slice capacity\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # -------- Slice-specific definitions -------- #\n",
+    "    if slice_type == \"eMBB\":\n",
+    "        app_name = \"YouTube\"\n",
+    "        protocol = \"QUIC\"\n",
+    "        packet_size_range = (1200, 15000)  # Large packets for streaming\n",
+    "        downlink_prob = 0.8                # Mostly DL traffic\n",
+    "\n",
+    "    elif slice_type == \"URLLC\":\n",
+    "        app_name = \"Meet\"\n",
+    "        protocol = \"UDP\"                   # Low-latency, real-time\n",
+    "        packet_size_range = (60, 300)      # Medium-sized packets\n",
+    "        downlink_prob = 0.8                # DL-dominant (video/audio delivery)\n",
+    "\n",
+    "    elif slice_type == \"mMTC\":\n",
+    "        app_name = \"IoT\"\n",
+    "        protocol = \"UDP\"                   # Lightweight, power-efficient\n",
+    "        packet_size_range = (20, 100)      # Very small sensor packets\n",
+    "        downlink_prob = 0.2                # UL-heavy traffic from sensors\n",
+    "\n",
+    "    else:\n",
+    "        raise ValueError(\"Unknown slice type\")\n",
+    "\n",
+    "    # -------- Slice capacity and overload -------- #\n",
+    "    prbs = 10  # Fixed number of PRBs for all slices\n",
+    "    \n",
+    "    # Min MCS (index 0: QPSK, 120/1024) → bits/RE = 0.234375\n",
+    "    # Per-PRB throughput: 39,375 bps ≈ 0.0394 Mbps\n",
+    "\n",
+    "    # Max MCS (index 27: 256-QAM, 948/1024) → bits/RE = 7.40625\n",
+    "    # Per-PRB throughput: 1,244,250 bps ≈ 1.2443 Mbps\n",
+    "    \n",
+    "    max_throughput_mbps = prbs * 1.244               # Max slice capacity in Mbps\n",
+    "    target_rate_mbps = overload_factor * max_throughput_mbps  # Overload target\n",
+    "\n",
+    "    total_bits = target_rate_mbps * 1e6 * duration_s   # Total bits to generate\n",
+    "\n",
+    "    # Estimate number of packets based on average size\n",
+    "    avg_packet_size_bytes = sum(packet_size_range) / 2\n",
+    "    avg_packet_size_bits = avg_packet_size_bytes * 8\n",
+    "    num_packets = int(total_bits / avg_packet_size_bits)\n",
+    "\n",
+    "    print(f\"[{slice_type}] Generating {num_packets} packets for {duration_s}s at {target_rate_mbps:.2f} Mbps\")\n",
+    "\n",
+    "    # -------- Generate synthetic packets -------- #\n",
+    "    interval = duration_s / num_packets\n",
+    "    timestamp = 0.0\n",
+    "\n",
+    "    with open(filename, \"w\", newline=\"\") as f:\n",
+    "        writer = csv.writer(f)\n",
+    "        writer.writerow([\"App name\", \"No.\", \"Time\", \"Source\", \"Destination\", \"Protocol\", \"Length\"])\n",
+    "\n",
+    "        for i in range(1, num_packets + 1):\n",
+    "            size = random.randint(*packet_size_range)\n",
+    "\n",
+    "            # Slice-specific directionality (DL vs UL)\n",
+    "            if random.random() < downlink_prob:\n",
+    "                src, dst = \"172.30.1.1\", \"172.30.1.250\"   # DL: Server → UE\n",
+    "            else:\n",
+    "                src, dst = \"172.30.1.250\", \"172.30.1.1\"   # UL: UE → Server\n",
+    "\n",
+    "            writer.writerow([\n",
+    "                app_name,\n",
+    "                i,\n",
+    "                round(timestamp, 6),\n",
+    "                src,\n",
+    "                dst,\n",
+    "                protocol,\n",
+    "                size\n",
+    "            ])\n",
+    "\n",
+    "            timestamp += interval\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "d999dda8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[eMBB] Generating 3839 packets for 10s at 24.88 Mbps\n",
+      "[URLLC] Generating 172777 packets for 10s at 24.88 Mbps\n",
+      "[mMTC] Generating 518333 packets for 10s at 24.88 Mbps\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generate 10 seconds of overloaded traffic (2× slice capacity)\n",
+    "generate_overloaded_slice_trace(\"synthetic_embb_queueing.csv\", \"eMBB\", duration_s=10, overload_factor=2.0)\n",
+    "generate_overloaded_slice_trace(\"synthetic_urllc_queueing.csv\", \"URLLC\", duration_s=10, overload_factor=2.0)\n",
+    "generate_overloaded_slice_trace(\"synthetic_mmtc_queueing.csv\", \"mMTC\", duration_s=10, overload_factor=2.0)\n"
+   ]
   }
  ],
  "metadata": {
