fill the empty parts of the files

--- a/backend/notebooks/test.ipynb
+++ b/backend/notebooks/test.ipynb
@@ -1469,12 +1469,121 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "789010f2",
+   "metadata": {},
+   "source": [
+    "## Add the times with zero length to have files of the same size and time duration"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1eedccf3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_361265/767676791.py:21: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  merged[col] = merged[col].fillna(method=\"ffill\").fillna(method=\"bfill\")\n",
+      "/tmp/ipykernel_361265/767676791.py:21: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  merged[col] = merged[col].fillna(method=\"ffill\").fillna(method=\"bfill\")\n",
+      "/tmp/ipykernel_361265/767676791.py:21: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  merged[col] = merged[col].fillna(method=\"ffill\").fillna(method=\"bfill\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load the three CSV files\n",
+    "df_embb = pd.read_csv(\"../assets/traces/eMBB.csv\")\n",
+    "df_urllc = pd.read_csv(\"../assets/traces/URLLC.csv\")\n",
+    "df_mmtc = pd.read_csv(\"../assets/traces/mMTC.csv\")\n",
+    "\n",
+    "# Build timeline from the union of all unique times\n",
+    "all_times = pd.concat([df_embb[\"Time\"], df_urllc[\"Time\"], df_mmtc[\"Time\"]]).drop_duplicates()\n",
+    "timeline = pd.DataFrame({\"Time\": all_times.sort_values().reset_index(drop=True)})\n",
+    "\n",
+    "def align_and_fill(df, timeline):\n",
+    "    # Merge with full timeline\n",
+    "    merged = pd.merge(timeline, df, on=\"Time\", how=\"left\")\n",
+    "    # Fill missing rows with 0 for Length\n",
+    "    if \"Length\" in merged.columns:\n",
+    "        merged[\"Length\"] = merged[\"Length\"].fillna(0).astype(int)\n",
+    "    # Fill other columns forward/backward (so App name, IPs, etc. are valid)\n",
+    "    for col in merged.columns:\n",
+    "        if col not in [\"Time\", \"Length\"]:\n",
+    "            merged[col] = merged[col].fillna(method=\"ffill\").fillna(method=\"bfill\")\n",
+    "    return merged\n",
+    "\n",
+    "# Align and fill each dataframe\n",
+    "df_embb_filled = align_and_fill(df_embb, timeline)\n",
+    "df_urllc_filled = align_and_fill(df_urllc, timeline)\n",
+    "df_mmtc_filled = align_and_fill(df_mmtc, timeline)\n",
+    "\n",
+    "# Save the updated files\n",
+    "df_embb_filled.to_csv(\"eMBB_aligned.csv\", index=False)\n",
+    "df_urllc_filled.to_csv(\"URLLC_aligned.csv\", index=False)\n",
+    "df_mmtc_filled.to_csv(\"mMTC_aligned.csv\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "746f3325",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_369517/3617538536.py:22: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  merged[col] = merged[col].fillna(method=\"ffill\").fillna(method=\"bfill\")\n",
+      "/tmp/ipykernel_369517/3617538536.py:22: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  merged[col] = merged[col].fillna(method=\"ffill\").fillna(method=\"bfill\")\n",
+      "/tmp/ipykernel_369517/3617538536.py:22: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  merged[col] = merged[col].fillna(method=\"ffill\").fillna(method=\"bfill\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load original mixed file\n",
+    "df_mixed = pd.read_csv(\"../assets/traces/mixed.csv\")\n",
+    "\n",
+    "# Load the separated slice files\n",
+    "df_embb = pd.read_csv(\"../assets/traces/eMBB.csv\")\n",
+    "df_urllc = pd.read_csv(\"../assets/traces/URLLC.csv\")\n",
+    "df_mmtc = pd.read_csv(\"../assets/traces/mMTC.csv\")\n",
+    "\n",
+    "# Use mixed.csv timeline (keep duplicates)\n",
+    "timeline = df_mixed[[\"Time\"]].copy().reset_index(drop=True)\n",
+    "\n",
+    "def align_and_fill(df, timeline):\n",
+    "    merged = pd.merge(timeline, df, on=\"Time\", how=\"left\")\n",
+    "    # If packet missing, set Length=0\n",
+    "    if \"Length\" in merged.columns:\n",
+    "        merged[\"Length\"] = merged[\"Length\"].fillna(0).astype(int)\n",
+    "    # Fill other metadata columns forward/backward if needed\n",
+    "    for col in merged.columns:\n",
+    "        if col not in [\"Time\", \"Length\"]:\n",
+    "            merged[col] = merged[col].fillna(method=\"ffill\").fillna(method=\"bfill\")\n",
+    "    return merged\n",
+    "\n",
+    "# Align each slice\n",
+    "df_embb_aligned = align_and_fill(df_embb, timeline)\n",
+    "df_urllc_aligned = align_and_fill(df_urllc, timeline)\n",
+    "df_mmtc_aligned = align_and_fill(df_mmtc, timeline)\n",
+    "\n",
+    "# Save results\n",
+    "df_embb_aligned.to_csv(\"../assets/traces/eMBB_aligned.csv\", index=False)\n",
+    "df_urllc_aligned.to_csv(\"../assets/traces/URLLC_aligned.csv\", index=False)\n",
+    "df_mmtc_aligned.to_csv(\"../assets/traces/mMTC_aligned.csv\", index=False)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2096,7 +2205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "id": "af20ca57",
    "metadata": {},
    "outputs": [],
@@ -2191,7 +2300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "id": "d999dda8",
    "metadata": {},
    "outputs": [
